--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "linebreak-style": ["error", "windows"],
+      "comma-dangle": ["error", "never"],
+      "no-param-reassign": [2, { "props": false }],
+      "class-methods-use-this": "off",
+      "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+      "semi": ["error", "always"],
+      "indent": ["error", 2]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
