--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
@@ -35,13 +36,37 @@
       "eslint:recommended"
     ],
     "rules": {
-      "linebreak-style": ["error", "windows"],
-      "comma-dangle": ["error", "never"],
-      "no-param-reassign": [2, { "props": false }],
+      "linebreak-style": [
+        "error",
+        "windows"
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-param-reassign": [
+        2,
+        {
+          "props": false
+        }
+      ],
       "class-methods-use-this": "off",
-      "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
-      "semi": ["error", "always"],
-      "indent": ["error", 2]
+      "no-plusplus": [
+        2,
+        {
+          "allowForLoopAfterthoughts": true
+        }
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "indent": [
+        "error",
+        2
+      ],
+      "no-cond-assign": 2,
+      "no-console": 2
     },
     "parserOptions": {
       "parser": "babel-eslint"
