--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-vue": "^5.0.0-0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -38,7 +40,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:airbnb"
+      "airbnb-base"
     ],
     "rules": {
       "linebreak-style": [
