--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.11",
-    "qs": "^6.5.2",
+    "query-string": "^6.2.0",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
